election: Fix alignment of booth link when voter weight is displayed

--- a/zeus/static/zeus/sass/app.scss
+++ b/zeus/static/zeus/sass/app.scss
@@ -652,7 +652,7 @@ form#upload_form {
   color: green;
 }
 
-.voter-weight { margin-bottom: -29px }
+.voter-weight { margin-bottom: 13px }
 
 
 @import "forum";
